# First

./: README.md  main.py  pyproject.toml
data/: names.txt
src/my_project/: main.py  masks.py  processing.py  test.py  widget.py
tests/: test_main.py
